recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:25: error: expected start of definition
	override def run() {
                 ^Sierpinski:29: error: Unmatched closing brace '}' ignored here
}
^